<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "EveryTask">]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="connections">Connections</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register_title">Register to &appname;</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="login_title">Login to &appname;</string>
    <string name="have_no_account">Need an account?</string>
    <string name="usernameMock">test1</string>
    <string name="emailMock">user1@everytask.at</string>
    <string name="passwordMock">password1</string>
    <string name="addtask">addTask</string>
    <string name="back">Back</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="dueDate">Due</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="resend_mail">Resend Verification Mail</string>
    <string name="mail_sent">Verification Mail sent</string>
    <string name="verification_text">Please check your inbox and click on the link in the verification mail to verify your account.</string>
    <string name="name">Name</string>
    <string name="createGroup">Create Group</string>
    <string name="inviteLinkText">Invite your Colleagues to join your group</string>
    <string name="copy">Copy</string>
    <string name="generate">Generate</string>
    <string name="leave">Leave</string>
    <string name="lock">Lock</string>
</resources>