<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/it_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:iconTint="@color/raisin"
        tools:targetApi="o" />

    <item
        android:id="@+id/it_groups"
        android:title="@string/groups"
        android:icon="@drawable/ic_baseline_groups_24"
        android:iconTint="@color/raisin"
        tools:targetApi="o" />

    <item
        android:id="@+id/it_appointments"
        android:title="Appointments"
        android:icon="@drawable/ic_baseline_appointments_24"
        android:iconTint="@color/raisin"
        tools:targetApi="o"/>

    <item
        android:id="@+id/it_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:iconTint="@color/raisin"
        tools:targetApi="o"/>
</menu>