<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_registerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_title"
            android:textColor="@color/raisin"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_toLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <TextView
                android:id="@+id/tv_alreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/tv_toLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:onClick="toLogin"
                android:text="@string/login"
                android:textColor="@color/raisin"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_sent"
            android:textStyle="bold"
            android:layout_marginTop="50sp"
            android:textColor="@color/raisin"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_text"
            android:paddingHorizontal="50sp"
            android:textAlignment="center"
            android:layout_marginTop="20sp"
            android:textColor="@color/raisin"
            android:textSize="15sp"
            />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="10sp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/ghost"
                android:onClick="sendVerification"
                android:text="@string/resend_mail"
                android:textColor="@color/raisin"
                tools:ignore="UsingOnClickInXml" />

            <ProgressBar
                android:id="@+id/pb_register"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/raisin"
                android:visibility="gone" />


        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>